fixed layout problem commit

--- a/css/style..css
+++ b/css/style..css
@@ -1,7 +1,7 @@
 
 body{
 
-    height: 100vh;
+    height: 120vh;
     background-image: linear-gradient(180deg, #009688 15%, #DBDBD3 15%);
 }
 
